src/components/ControlPanel/index.styl
.wrapper
	width 100vw
	overflow hidden
	max-width 60rem
	display flex
	margin 1rem auto
	justify-content space-between
	flex-wrap wrap
	> *
		flex-shrink 0
		margin 0.5rem

.label
	display flex
	flex-direction column
	align-items stretch
	> h4
		font-weight 300
		line-height 1
		margin 1rem 0 0.25rem


.body
	position relative
	composes label
	flex 1
	min-width 16rem
	min-height 6rem
	textarea
		flex 1
		max-width 100%
		min-width 100%

.button
	display block
	text-align center
	line-height 2.5rem
	font-size 1rem
	position absolute
	width auto
	appearance none
	bottom 0.25rem
	right 0.25rem
	height 2.5rem
	width 2.5rem
	border 0px
	border-radius 50% 0 0
	cursor pointer
	background currentColor
	box-shadow -0.125rem -0.125rem 0 0.38rem currentColor
	&:focus
		outline none
		box-shadow -0.125rem -0.125rem 0 0.38rem currentColor,
			-0.125rem -0.125rem 7px 7px #4d90fe;

